Closed Bug 1625839 Opened 5 years ago Closed 5 years ago

Crash in [@ nsGlobalWindowOuter::MaybeTabGroupOuter]

Categories

(Core :: DOM: Core & HTML, defect)

Unspecified
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla76
Tracking Status
firefox-esr68 --- unaffected
firefox74 --- unaffected
firefox75 --- unaffected
firefox76 --- fixed

People

(Reporter: gsvelto, Assigned: sefeng211)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-82ddb30f-49df-4d23-a5ab-3c2c80200328.

Top 10 frames of crashing thread:

0 xul.dll nsGlobalWindowOuter::MaybeTabGroupOuter dom/base/nsGlobalWindowOuter.cpp:7592
1 xul.dll mozilla::dom::Document::GetDocGroupOrCreate dom/base/Document.cpp:6793
2 xul.dll static nsINode::operator new dom/base/nsINode.cpp:124
3 xul.dll NS_NewHTMLSharedElement dom/html/HTMLSharedElement.cpp:25
4 xul.dll static nsContentDLF::CreateBlankDocument layout/build/nsContentDLF.cpp:255
5 xul.dll nsDocShell::CreateAboutBlankContentViewer docshell/base/nsDocShell.cpp:6558
6 xul.dll nsDocShell::EnsureContentViewer docshell/base/nsDocShell.cpp:6421
7 xul.dll nsDocShell::GetDocument docshell/base/nsDocShell.cpp:3306
8 xul.dll static nsDocShell::ValidateOrigin docshell/base/nsDocShell.cpp:1107
9 xul.dll mozilla::dom::BrowsingContext::CanAccess docshell/base/BrowsingContext.cpp:840

It seems like bug 1611767 didn't fix the problem entirely.

This crash looks unrelated to bug 1611767. I looked at a few Nightly crashes, and they were all happening inside NS_NewHTMLSharedElement.

It looks like this first showed up on Nightly in the 20200325213906 build.

Here's the change set: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=2abd352490a4bf2e3a9118b154c0e351c0bad314&tochange=b3c3f7d0f044c92c774a6f2ec53385f3b3f2ee0c

Could this be fallout from bug 1624321? That's in the change set range, and also a lot of the code that was touched by the arena allocator work shows up in the stack.

Flags: needinfo?(sefeng)
Keywords: regression
Regressed by: 1624321
Has Regression Range: --- → yes
Assignee: nobody → sefeng
Status: NEW → ASSIGNED
Pushed by sefeng@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ad033cfda390 Fix a null pointer crash in GetDocGroupOrCreate r=smaug
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
Flags: needinfo?(sefeng)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: