Bug 1625839 - Fix a null pointer crash in GetDocGroupOrCreate r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D68814